Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/distributed_ray.ipynb
+++ b/notebooks/distributed_ray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f2c7b117-675f-450b-8076-fcef8bf7771a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "import ray\n",
     "\n",
     "# ----- RUN CONFIG (edit as needed) -----\n",
-    "\n",
+    "#Ideally this is want you want. But having trouble getting the libraries installed. Need to work on configuring the env.\n",
     "'''\n",
     "#Pip installs do not work yet in Domino. Add the libraries to your environment or install using command line in the worker\n",
     "RUN_CONFIG = {\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "ae4e00d6-0f97-4180-a994-7cb7fc0e83ea",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e6ce6fe0-a01c-410d-9b65-fd2843dcf049",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "c0a23211-b6aa-469e-878f-b19ec0943134",
    "metadata": {},
    "outputs": [],
@@ -174,37 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "baa8252e-696f-4b3d-90c9-35695188045b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-09-20 17:30:34,920\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: log_to_driver\n",
-      "SIGTERM handler is not set because current thread is not the main thread.\n",
-      "2025-09-20 17:30:35,945\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: log_to_driver\n",
-      "SIGTERM handler is not set because current thread is not the main thread.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"worker_1\": {\n",
-      "    \"wrote\": \"/mnt/data/ddl-end-to-end-demo/1f000000/81a4966da5e2d352ffffffffffffffffffffffff1f000000/probe_1f000000_81a4966da5e2d352ffffffffffffffffffffffff1f000000_157.json\",\n",
-      "    \"size\": 17165\n",
-      "  },\n",
-      "  \"worker_2\": {\n",
-      "    \"wrote\": \"/mnt/data/ddl-end-to-end-demo/1f000000/ebd77e3d348811d7ffffffffffffffffffffffff1f000000/probe_1f000000_ebd77e3d348811d7ffffffffffffffffffffffff1f000000_156.json\",\n",
-      "    \"size\": 17165\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# file: simple_ray_runtime_env_fix.py\n",
     "import os, json, platform\n",
@@ -295,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "d995288e-e1aa-4b82-ad68-ad8246d9b55c",
    "metadata": {},
    "outputs": [],
@@ -341,6 +314,7 @@
     "```\n",
     "\n",
     "Mutation to allow outbound to port `29000` - **allow-custom-port-outbound-ray-interworker-comm**\n",
+    "\n",
     "```\n",
     "apiVersion: apps.dominodatalab.com/v1alpha1\n",
     "kind: Mutation\n",
@@ -497,147 +471,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "eff962e3-ae37-4083-8517-dd95b76b9420",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m View detailed results here: /mnt/data/ddl-end-to-end-demo/unknown_job/ray_results/mnist_torch_ddp_20000000\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m To visualize your results with TensorBoard, run: `tensorboard --logdir /tmp/ray/session_2025-09-20_07-15-22_475265_1/artifacts/2025-09-20_10-30-43/mnist_torch_ddp_20000000/driver_artifacts`\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m AIR_VERBOSITY is set, ignoring passed-in ProgressReporter for now.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training started with configuration:\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭──────────────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training config                      │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├──────────────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loop_config/batch_size     256 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loop_config/epochs           5 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loop_config/lr           0.001 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰──────────────────────────────────────╯\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(RayTrainWorker pid=325, ip=100.64.60.227)\u001b[0m Setting up process group for: env:// [rank=0, world_size=2]\n",
-      "\u001b[36m(TorchTrainer pid=280, ip=100.64.60.227)\u001b[0m Started distributed worker processes: \n",
-      "\u001b[36m(TorchTrainer pid=280, ip=100.64.60.227)\u001b[0m - (node_id=3b69fc3f37ca82c7ec924c97f63485d15dba64e05e8e9b299ded9f91, ip=100.64.60.227, pid=325) world_rank=0, local_rank=0, node_rank=0\n",
-      "\u001b[36m(TorchTrainer pid=280, ip=100.64.60.227)\u001b[0m - (node_id=135baf60627c984443801299c5cae9747aa01920cc1d82b8701a2bd6, ip=100.64.21.58, pid=156) world_rank=1, local_rank=0, node_rank=1\n",
-      "\u001b[36m(RayTrainWorker pid=325, ip=100.64.60.227)\u001b[0m Moving model to device: cuda:0\n",
-      "\u001b[36m(RayTrainWorker pid=325, ip=100.64.60.227)\u001b[0m Wrapping provided model in DistributedDataParallel.\n",
-      "\u001b[36m(RayTrainWorker pid=156, ip=100.64.21.58)\u001b[0m Moving model to device: cuda:0\n",
-      "\u001b[36m(RayTrainWorker pid=156, ip=100.64.21.58)\u001b[0m Wrapping provided model in DistributedDataParallel.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training finished iteration 1 at 2025-09-20 10:31:01. Total running time: 16s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭───────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training result               │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├───────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ checkpoint_dir_name           │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_this_iter_s      11.6474 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_total_s          11.6474 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ training_iteration          1 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ epoch                       0 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loss            55.5477 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ val_acc                0.9386 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰───────────────────────────────╯\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training finished iteration 2 at 2025-09-20 10:31:07. Total running time: 23s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭───────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training result               │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├───────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ checkpoint_dir_name           │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_this_iter_s      6.17051 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_total_s          17.8179 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ training_iteration          2 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ epoch                       1 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loss            20.1981 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ val_acc                0.9558 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰───────────────────────────────╯\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training finished iteration 3 at 2025-09-20 10:31:13. Total running time: 29s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭───────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training result               │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├───────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ checkpoint_dir_name           │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_this_iter_s      6.08297 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_total_s          23.9009 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ training_iteration          3 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ epoch                       2 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loss            13.4598 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ val_acc                 0.966 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰───────────────────────────────╯\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training finished iteration 4 at 2025-09-20 10:31:19. Total running time: 35s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭───────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training result               │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├───────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ checkpoint_dir_name           │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_this_iter_s      5.91588 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_total_s          29.8168 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ training_iteration          4 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ epoch                       3 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loss            9.90304 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ val_acc                0.9708 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰───────────────────────────────╯\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training finished iteration 5 at 2025-09-20 10:31:25. Total running time: 41s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╭───────────────────────────────╮\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ Training result               │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ├───────────────────────────────┤\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ checkpoint_dir_name           │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_this_iter_s      6.02518 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ time_total_s           35.842 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ training_iteration          5 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ epoch                       4 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ train_loss            7.54044 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m │ val_acc                0.9724 │\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m ╰───────────────────────────────╯\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Training completed after 5 iterations at 2025-09-20 10:31:26. Total running time: 42s\n",
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(TunerInternal pid=11812)\u001b[0m Wrote the latest version of all result files and experiment state to '/mnt/data/ddl-end-to-end-demo/unknown_job/ray_results/mnist_torch_ddp_20000000' in 0.0226s.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()\n"
    ]
