Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/distributed_ray.ipynb
+++ b/notebooks/distributed_ray.ipynb
@@ -490,9 +490,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f750be1a-aa2d-4edd-b6de-5de8742d0800",
+   "metadata": {},
+   "source": [
+    "## Takeaways\n",
+    "\n",
+    "1. Datasets and EDV's are simply mounted inside the Ray worker nodes.\n",
+    "2. S3 can be accessed via IRSA integration (see notebook - `basic_ray_job.ipynb`)\n",
+    "3. This notebook demonstrates how to run a distributed training job\n",
+    "\n",
+    "## Additional details\n",
+    "\n",
+    "Running distributed training on multiple GPU's requires optimizing inter-node communication. With AWS you can get the following number of GPU's on a single node\n",
+    "\n",
+    "- If you want 8 GPUs in one node → p5.48xlarge, p4d.24xlarge, p3.16xlarge, p2.16xlarge, g6.48xlarge.\n",
+    "- If you want 4 GPUs in one node → p5.24xlarge, p3.8xlarge, p2.8xlarge, g6.24xlarge.\n",
+    "- If you want 2 GPUs in one node → p5.12xlarge, g6.12xlarge.\n",
+    "\n",
+    "If any of them are adequate put all workers in one node to reduce inter-node communication. Also look for which ones support NVLink/NVSwitch for optimizing communication\n",
+    "\n",
+    "## Best for Distributed Training (NVLink / NVSwitch)\n",
+    "\n",
+    "| Instance       | GPUs | GPU Type | Memory | Interconnect       | Notes |\n",
+    "|----------------|------|----------|--------|--------------------|-------|\n",
+    "| **p5.48xlarge** | 8    | H100     | 80 GB  | **NVSwitch**       | Full all-to-all, ~900 GB/s per GPU |\n",
+    "| **p5.24xlarge** | 4    | H100     | 80 GB  | **NVSwitch**       | Same fabric, half the GPUs |\n",
+    "| **p5.12xlarge** | 2    | H100     | 80 GB  | **NVLink**         | Peer-to-peer ~600 GB/s |\n",
+    "| **p4d.24xlarge**| 8    | A100     | 40 GB  | **NVSwitch**       | Popular for LLM training |\n",
+    "| **p4de.24xlarge**| 8   | A100     | 80 GB  | **NVSwitch**       | Same but larger VRAM |\n",
+    "| **p3.16xlarge** | 8    | V100     | 16 GB  | Partial **NVLink** | Two 4-GPU NVLink groups, cross-socket PCIe |\n",
+    "| **p3.8xlarge**  | 4    | V100     | 16 GB  | NVLink mesh        | All four linked |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Multi-GPU, PCIe Only (No NVLink)\n",
+    "\n",
+    "| Instance       | GPUs | GPU Type | Memory | Interconnect | Notes |\n",
+    "|----------------|------|----------|--------|--------------|-------|\n",
+    "| **g6.48xlarge** | 8    | L4       | 24 GB  | PCIe         | Cost-effective inference |\n",
+    "| **g6e.48xlarge**| 8    | L40S     | 48 GB  | PCIe         | Good for fine-tuning + RAG |\n",
+    "| **p2.16xlarge** | 16   | K80      | 12 GB  | PCIe         | Very old, not recommended |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Quick Guidance\n",
+    "\n",
+    "- **Serious training ** → use **p5** (H100) or **p4d/e** (A100).  \n",
+    "- **Smaller fine-tuning / inference ** → use **g6e** (L40S) for price/perf.  \n",
+    "- **Legacy workloads** → avoid **p2** (K80) unless forced by budget/compatibility.  \n",
+    "\n",
+    "\n",
+    "## Multi-node GPU clusters\n",
+    "\n",
+    "Domino uses Karpenter as a scheduler and Karpenter is not aware of placement groups. A small field solution is need to ensure that all the nodes used by the Ray workers are started with NVSwitch connectivity for HPC distributed training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45367d66-4f56-4e1a-98b0-44504bd70657",
+   "id": "e10a32a7-8335-4ad6-80cf-3fef34c82d43",
    "metadata": {},
    "outputs": [],
    "source": []
