Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/distributed_ray.ipynb
+++ b/notebooks/distributed_ray.ipynb
@@ -273,6 +273,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_job_hex_safe(default=\"unknown_job\"):\n",
+    "    try:\n",
+    "        if not ray.is_initialized():\n",
+    "            # connect or start a local Ray; if you only ever connect to a cluster, remove this\n",
+    "            ray.init(ignore_reinit_error=True)\n",
+    "\n",
+    "        ctx = ray.get_runtime_context()\n",
+    "\n",
+    "        # Newer Ray: ctx.job_id (may be an object with .hex or already a str)\n",
+    "        if hasattr(ctx, \"job_id\") and ctx.job_id is not None:\n",
+    "            jid = ctx.job_id\n",
+    "            return jid.hex() if hasattr(jid, \"hex\") else str(jid)\n",
+    "\n",
+    "        # Older Ray: ctx.get_job_id()\n",
+    "        if hasattr(ctx, \"get_job_id\"):\n",
+    "            jid = ctx.get_job_id()\n",
+    "            return jid.hex() if hasattr(jid, \"hex\") else str(jid)\n",
+    "    except Exception:\n",
+    "        pass\n",
+    "    return default\n",
+    "    \n",
     "def prepare_mnist(data_root: Path):\n",
     "    data_root.mkdir(parents=True, exist_ok=True)\n",
     "    # Uses torchvision's built-in downloader/extractor\n",
@@ -281,9 +302,17 @@
     "    datasets.MNIST(str(data_root), train=True,  download=True, transform=tfm)\n",
     "    datasets.MNIST(str(data_root), train=False, download=True, transform=tfm)\n",
     "\n",
-    "\n",
-    "data_dir = Path(\"/mnt/data/ddl-end-to-end-demo/mnist/\")\n",
-    "data_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eada5ab2-e8a3-46a1-8dfa-e88e401cdfd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = Path(\"/mnt/data/ddl-end-to-end-demo/\")\n",
     "prepare_mnist(data_dir)"
    ]
   },
@@ -396,6 +425,7 @@
     "                correct += (pred == y).sum().item()\n",
     "                total += y.numel()\n",
     "        acc = correct / total\n",
+    "        ##Demonstrates the train report\n",
     "        train.report({\"epoch\": epoch, \"train_loss\": running, \"val_acc\": acc})\n",
     "\n",
     "\n",
@@ -404,19 +434,19 @@
     "\n",
     "    RUNTIME_ENV = {\n",
     "        \"env_vars\": {\n",
-    "        \"GLOO_SOCKET_IFNAME\": \"eth0\",\n",
+    "        #\"GLOO_SOCKET_IFNAME\": \"eth0\",\n",
     "        \"SHARED_DIR\": str(data_dir),\n",
     "        \"TUNE_DISABLE_AUTO_CALLBACKS\": \"1\",\n",
     "        \"TORCH_DISABLE_ADDR2LINE\": \"1\",     # stop symbolizer hang\n",
     "        \"TORCH_SHOW_CPP_STACKTRACES\": \"1\",\n",
     "        #\"NCCL_IB_DISABLE\": \"1\",\n",
-    "        \"NCCL_P2P_DISABLE\": \"1\",\n",
-    "        \"NCCL_SHM_DISABLE\": \"1\",\n",
+    "        #\"NCCL_P2P_DISABLE\": \"1\",\n",
+    "        #\"NCCL_SHM_DISABLE\": \"1\",\n",
     "        \"OMP_NUM_THREADS\": \"2\",\n",
     "        # >>> Key bits for DDP rendezvous <<<\n",
     "        \"MASTER_PORT\": \"29000\",           # fixed, not ephemeral\n",
-    "        \"GLOO_SOCKET_IFNAME\": \"eth0\",     # bind on pod interface\n",
-    "        \"NCCL_SOCKET_IFNAME\": \"eth0\",     # harmless even if CPU-only\n",
+    "        #\"GLOO_SOCKET_IFNAME\": \"eth0\",     # bind on pod interface\n",
+    "        #\"NCCL_SOCKET_IFNAME\": \"eth0\",     # harmless even if CPU-only\n",
     "            \n",
     "        }\n",
     "    }\n",
@@ -430,22 +460,14 @@
     "          namespace=\"demo-ray-ns\"\n",
     "      )\n",
     "\n",
-    "    ctx = get_runtime_context()\n",
-    "    try:\n",
-    "        job_id_hex = ctx.get_job_id().hex()\n",
-    "    except Exception:\n",
-    "        job_id_hex = \"unknown_job\"\n",
+    "    job_id_hex = get_job_hex_safe()\n",
     "\n",
     "    DATASET_FOLDER = \"/mnt/data/ddl-end-to-end-demo/\"\n",
-    "    shared = Path(DATASET_FOLDER,job_id_hex,\"ray_results\")  # pulled from runtime_env\n",
+    "    shared = Path(DATASET_FOLDER,\"ray_job\",job_id_hex,\"ray_results\")  # pulled from runtime_env\n",
     "    shared.mkdir(parents=True, exist_ok=True)\n",
     "    STORAGE_PATH=str(shared)\n",
-    "    \n",
-    "    storage_base = Path(\"/mnt/data/ddl-end-to-end-demo\")  # head-visible shared\n",
-    "    job_id_hex = getattr(ray.get_runtime_context(), \"get_job_id\", lambda: \"unknown\")()\n",
-    "    job_id_hex = job_id_hex.hex() if hasattr(job_id_hex, \"hex\") else str(job_id_hex)\n",
-    "    storage_path = str(storage_base / job_id_hex / \"ray_results\")\n",
-    "    \n",
+    "\n",
+    "\n",
     "    os.environ[\"TUNE_DISABLE_AUTO_CALLBACKS\"] = \"1\"\n",
     "    trainer = TorchTrainer(\n",
     "        train_loop_per_worker,\n",
@@ -531,14 +553,6 @@
     "| **g6.48xlarge** | 8    | L4       | 24 GB  | PCIe         | Cost-effective inference |\n",
     "| **g6e.48xlarge**| 8    | L40S     | 48 GB  | PCIe         | Good for fine-tuning + RAG |\n",
     "| **p2.16xlarge** | 16   | K80      | 12 GB  | PCIe         | Very old, not recommended |\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Quick Guidance\n",
-    "\n",
-    "- **Serious training ** → use **p5** (H100) or **p4d/e** (A100).  \n",
-    "- **Smaller fine-tuning / inference ** → use **g6e** (L40S) for price/perf.  \n",
-    "- **Legacy workloads** → avoid **p2** (K80) unless forced by budget/compatibility.  \n",
     "\n",
     "\n",
     "## Multi-node GPU clusters\n",
