--- a/notebooks/basic_mlflow_client.ipynb
+++ b/notebooks/basic_mlflow_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ba3c085-eb7f-47ff-8d75-23b033069f43",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c0e4d09f-86a9-4224-91c4-79daef5cfe4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import annotations\n",
+    "import os\n",
     "from utils import mlflow_utils\n",
     "import xgboost as xgb\n",
     "from sklearn.datasets import load_breast_cancer\n",
@@ -47,23 +48,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "164ac873-e488-4d17-a4c3-cab21212e406",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RegisteredModel: aliases={}, creation_timestamp=1756929809073, description='', last_updated_timestamp=1758500743508, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1758500743508, current_stage='None', description='XGB basic demo — acc=0.9580', last_updated_timestamp=1758500743508, name='xgb-demo-wadkars', run_id='597c4d954f1c49c2a6c7fbfa71bd5aaf', run_link='', source='mlflow-artifacts:/mlflow/597c4d954f1c49c2a6c7fbfa71bd5aaf/artifacts/model', status='READY', status_message='', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
+       " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
+       " 'mlflow.domino.environment_revision_id': '68ceaf1ac4ae886f22d8150d',\n",
+       " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
+       " 'mlflow.domino.project_id': '68b08bbfdc77613e66e6364e',\n",
+       " 'mlflow.domino.project_name': 'ddl-end-to-end-demo',\n",
+       " 'mlflow.domino.provenance_checkpoint_id': '68d0973b19b70f6cdbd1b7ae',\n",
+       " 'mlflow.domino.run_id': '68d09631e5768d3a1f9f85db',\n",
+       " 'mlflow.domino.run_number': '61',\n",
+       " 'mlflow.domino.user': 'wadkars',\n",
+       " 'mlflow.domino.user_id': '68ac9b59ea374e2b81c48d75',\n",
+       " 'mlflow.source.git.branch': '5e7b2bd03ad8040b6268a9acd55cddd7e00ccbe3',\n",
+       " 'mlflow.source.git.commit': '5e7b2bd03ad8040b6268a9acd55cddd7e00ccbe3',\n",
+       " 'mlflow.source.type': 'NOTEBOOK',\n",
+       " 'mlflow.user': 'wadkars'}, user_id='', version='2'>], name='xgb-demo-wadkars', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651',\n",
+       " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
+       " 'mlflow.domino.environment_revision_id': '68b5a4ebb7910b03aaf26b12',\n",
+       " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
+       " 'mlflow.domino.project_id': '68b08bbfdc77613e66e6364e',\n",
+       " 'mlflow.domino.project_name': 'ddl-end-to-end-demo',\n",
+       " 'mlflow.domino.run_id': '68b8950637cefe4fe9452448',\n",
+       " 'mlflow.domino.run_number': '37',\n",
+       " 'mlflow.domino.user': 'wadkars',\n",
+       " 'mlflow.domino.user_id': '68ac9b59ea374e2b81c48d75',\n",
+       " 'mlflow.source.type': 'NOTEBOOK',\n",
+       " 'mlflow.user': 'wadkars'}>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_name = os.environ['DOMINO_STARTING_USERNAME']\n",
     "exp_model_name = f\"xgb-demo-{my_name}\"\n",
+    "model_name = exp_model_name\n",
     "mlflow_utils.ensure_mlflow_experiment(exp_model_name)\n",
     "mlflow_utils.ensure_registered_model(exp_model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "952a6292-8d54-4bee-8534-359a3d9b3dc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [00:26:26] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "2025/09/22 00:26:28 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/09/22 00:26:29 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: xgb-demo-wadkars, version 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run ID:        c0eb2b2c75554c8b8f25185c1b8d1a0d\n",
+      "Model URI:     runs:/c0eb2b2c75554c8b8f25185c1b8d1a0d/model\n",
+      "Registered:    xgb-demo-wadkars v3 (status=READY)\n",
+      "🏃 View run xgb-basic at: http://127.0.0.1:8765/#/experiments/266/runs/c0eb2b2c75554c8b8f25185c1b8d1a0d\n",
+      "🧪 View experiment at: http://127.0.0.1:8765/#/experiments/266\n"
+     ]
+    }
+   ],
    "source": [
     "    # Optional: point to your MLflow server\n",
     "    # mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
@@ -127,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4d5ab2c9-8798-4929-b7eb-435313462f22",
    "metadata": {},
    "outputs": [],
@@ -153,7 +213,7 @@
     "    \"\"\"\n",
     "    if not isinstance(X, pd.DataFrame):\n",
     "        X = pd.DataFrame(X)\n",
-    "    print(X)\n",
+    "    #print(X)\n",
     "    y_pred = model.predict(X)\n",
     "    # Ensure numpy array\n",
     "    return np.asarray(y_pred)\n",
@@ -197,10 +257,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1448228f-c199-41fe-bc0c-72583228e692",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/mlflow/store/artifact/utils/models.py:31: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest = client.get_latest_versions(name, None if stage is None else [stage])\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3fc3dc859a344a799f11be9499b4271",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyFunc preds: [1]\n"
+     ]
+    }
+   ],
    "source": [
     "pyfunc_model = load_xgb_pyfunc_version(exp_model_name, \"latest\")\n",
     "sample = np.random.rand(1, 30)  # shape must match your training columns\n",
